--- a/index.css
+++ b/index.css
@@ -1,25 +1,49 @@
-.box{
-   width: 300px;
-   border: 2x solid black;
-   background-color: antiquewhite;
-
-   margin:  auto auto;
-   text-align: center;
-
-
+body {
+    font-family: "Arial", sans-serif;
 }
 
-.grid{
- display:grid;
- width: 200px;
- margin: auto auto;
- grid: 50px 50px 50px / auto auto auto;
- background-color: rgb(40, 39, 37);
-
-
+section {
+    text-align: center;
 }
-.child{
-    padding:10px;
-    background-color:white ;
-    margin: 5px;
+
+.cell {
+    font-family: "Permanent Marker", cursive;
+    width: 100px;
+    height: 100px;
+    box-shadow: 2px 2px 2px 2px #ecd7ba;
+    border: 2px solid #ecd7ba;
+    cursor: pointer;
+    line-height: 100px;
+    font-size: 60px;
+}
+
+.game--title {
+    font-size: 100px;
+    color: #d7a62f;
+    margin: 10px auto;
+}
+
+.game--container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 306px;
+    margin: 10px auto;
+    background-color: #11213a;
+    color: #04c0b2;
+}
+
+.game--status {
+    font-size: 50px;
+    color: #d7a62f;
+    margin: 20px auto;
+}
+
+.game--restart {
+    background-color: #f7e4ac;
+    width: 200px;
+    height: 50px;
+    font-size: 25px;
+    color: #5586e2;
+    box-shadow: 2px 2px 2px 2px #d86c23;
+    border: 2px solid #d86c23;
 }
